--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:money="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.diaoyonglong.moneyview.MainActivity">
+    android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <com.diaoyonglong.moneyviewlib.view.MoneyView
+        android:id="@+id/money_view_price"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:background="@color/colorPrimary"
+        money:cent_color="@color/add_cart"
+        money:cent_size="20sp"
+        money:grouping="true"
+        money:money_text="7890.589"
+        money:point_color="@color/colorAccent"
+        money:point_padding_left="6dp"
+        money:point_padding_right="6dp"
+        money:point_places="%.2f"
+        money:point_size="20sp"
+        money:prefix_color="@color/white"
+        money:prefix_size="20sp"
+        money:prefix_text="¥"
+        money:yuan_color="@color/add_cart"
+        money:yuan_size="33sp" />
 
-</android.support.constraint.ConstraintLayout>
+
+    <com.diaoyonglong.moneyviewlib.view.MoneyView
+        android:id="@+id/money_view_zhe"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:background="@color/colorPrimary"
+        money:cent_color="@color/add_cart"
+        money:cent_size="20sp"
+        money:grouping="true"
+        money:money_text="7.589"
+        money:point_color="@color/colorAccent"
+        money:point_padding_left="6dp"
+        money:point_padding_right="6dp"
+        money:point_places="%.1f"
+        money:point_size="20sp"
+        money:prefix="false"
+        money:prefix_color="@color/branch_center_top"
+        money:prefix_size="20sp"
+        money:prefix_text="¥"
+        money:yuan_color="@color/add_cart"
+        money:yuan_size="33sp"
+        money:zhekou="true"
+        money:zhekou_color="@color/white" />
+
+
+</LinearLayout>
+
