--- a/moneyviewlibrary/src/main/res/values/colors.xml
+++ b/moneyviewlibrary/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
 
     <color name="greyA">#aaaaaa</color>
     <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
     <color name="skyBlue">#87CEEB</color>
     <color name="seaBlue">#00aff0</color>
     <color name="walletBlue">#359ef5</color>
